--- a/notes/A-Tale-of-Two-Transducers.ipynb
+++ b/notes/A-Tale-of-Two-Transducers.ipynb
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "D = Delta(\"ab\")\n",
+    "D = Delta('ab')\n",
     "D"
    ]
   },
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "(D @ WFSA.from_string(\"ab\", Float)).trim"
+    "(D @ WFSA.from_string('ab', Float)).trim"
    ]
   },
   {
@@ -465,7 +465,7 @@
     }
    ],
    "source": [
-    "(cfg @ Delta1(\"ab\")).nullaryremove(binarize=False).trim()"
+    "(cfg @ Delta1('ab')).nullaryremove(binarize=False).trim()"
    ]
   },
   {
@@ -664,7 +664,7 @@
     }
    ],
    "source": [
-    "derivative(\"ab\", \"ab\").graphviz(fmt_node=lambda x: str(x))"
+    "derivative('ab', 'ab').graphviz(fmt_node=lambda x: str(x))"
    ]
   },
   {
@@ -688,7 +688,7 @@
     }
    ],
    "source": [
-    "(cfg @ derivative(\"a\", \"ab\") @ derivative(\"a\", \"ab\")).language(10)"
+    "(cfg @ derivative('a', 'ab') @ derivative('a', 'ab')).language(10)"
    ]
   },
   {
@@ -712,7 +712,7 @@
     }
    ],
    "source": [
-    "(cfg @ derivative(\"aa\", \"ab\")).language(10)"
+    "(cfg @ derivative('aa', 'ab')).language(10)"
    ]
   },
   {
@@ -748,7 +748,7 @@
     }
    ],
    "source": [
-    "cfg.derivative(\"a\").trim()"
+    "cfg.derivative('a').trim()"
    ]
   },
   {
@@ -778,7 +778,7 @@
     }
    ],
    "source": [
-    "(cfg @ derivative(\"a\", cfg.V)).nullaryremove(binarize=False).unaryremove().trim()"
+    "(cfg @ derivative('a', cfg.V)).nullaryremove(binarize=False).unaryremove().trim()"
    ]
   },
   {
