--- a/notes/Character-at-a-Time.ipynb
+++ b/notes/Character-at-a-Time.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = GreedilyTokenizedLLM(\"gpt2\")"
+    "llm = GreedilyTokenizedLLM('gpt2')"
    ]
   },
   {
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "prompt = \"Hello my name is\"\n",
+    "prompt = 'Hello my name is'\n",
     "pp = llm.p_next(prompt, 10).normalize()\n",
     "pp"
    ]
@@ -174,7 +174,7 @@
     }
    ],
    "source": [
-    "print(repr(\"\".join(pcfg.sample())))"
+    "print(repr(''.join(pcfg.sample())))"
    ]
   },
   {
@@ -206,7 +206,7 @@
     "tracer = TraceSWOR()\n",
     "for _ in range(1):\n",
     "    with tracer:\n",
-    "        print(\"----------------------------------\")\n",
+    "        print('----------------------------------')\n",
     "        ys = token_trie_approx.sample(prompt, max_tokens=50, draw=tracer, verbosity=1)\n",
     "        print(ys)"
    ]
@@ -1486,7 +1486,7 @@
    ],
    "source": [
     "tracer.root.graphviz(\n",
-    "    fmt_node=lambda x: f\"{x._mass:.3g}\", fmt_edge=lambda i, a, j: repr(a)\n",
+    "    fmt_node=lambda x: f'{x._mass:.3g}', fmt_edge=lambda i, a, j: repr(a)\n",
     ")"
    ]
   },
@@ -1524,7 +1524,7 @@
     "ADJ: \"fruit\"\n",
     "\n",
     "\"\"\"\n",
-    "        ).char_cfg(0.99, ignore=\"[ ]?\"),\n",
+    "        ).char_cfg(0.99, ignore='[ ]?'),\n",
     "        tol=1e-100,\n",
     "    )\n",
     ")"
@@ -1548,7 +1548,7 @@
     }
    ],
    "source": [
-    "\"\".join(fruit.sample())"
+    "''.join(fruit.sample())"
    ]
   },
   {
@@ -1579,7 +1579,7 @@
     }
    ],
    "source": [
-    "fruit(\"fruit flies like a banana \" + EOS)"
+    "fruit('fruit flies like a banana ' + EOS)"
    ]
   },
   {
@@ -1599,12 +1599,12 @@
     }
    ],
    "source": [
-    "prompt = \"The following is a favorite sentence among linguists:\"\n",
+    "prompt = 'The following is a favorite sentence among linguists:'\n",
     "token_trie_approx = TokenTrieApproximation(llm, fruit)\n",
     "tracer = TraceSWOR()\n",
     "for _ in range(1):\n",
     "    with tracer:\n",
-    "        print(\"----------------------------------\")\n",
+    "        print('----------------------------------')\n",
     "        ys = token_trie_approx.sample(prompt, max_tokens=50, draw=tracer)\n",
     "        print(ys)"
    ]
