--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b2c = H.fst.prune_to_alphabet(None, foo.V | {\"\"}).renumber"
+    "b2c = H.fst.prune_to_alphabet(None, foo.V | {''}).renumber"
    ]
   },
   {
@@ -174,10 +174,10 @@
    "outputs": [],
    "source": [
     "for x in foo.cnf.language(3):\n",
-    "    display(HTML(\"<hr/>\"))\n",
+    "    display(HTML('<hr/>'))\n",
     "    print(x)\n",
     "    bpe_x = b2c(None, x).epsremove.trim\n",
-    "    print(\"total weight of BPE sequences (i.e., ambiguity):\", bpe_x.total_weight())\n",
+    "    print('total weight of BPE sequences (i.e., ambiguity):', bpe_x.total_weight())\n",
     "    display(bpe_x)\n",
     "    print()"
    ]
@@ -253,7 +253,7 @@
     "for x, w in foo.cnf.language(L + 2).items():\n",
     "    if len(x) > L:\n",
     "        continue\n",
-    "    cc[\"\".join(x)] += w\n",
+    "    cc[''.join(x)] += w\n",
     "# cc"
    ]
   },
@@ -426,7 +426,7 @@
     "df = []\n",
     "for x, w in sorted(normalize(lm2.p_next(context)).items(), key=lambda kv: -kv[1]):\n",
     "    df.append((x, (H.tokenizer.decode([x]) if x != EOS else EOS), w))\n",
-    "pd.DataFrame(df, columns=[\"token_id\", \"chars\", \"prob\"]).set_index(\"token_id\")"
+    "pd.DataFrame(df, columns=['token_id', 'chars', 'prob']).set_index('token_id')"
    ]
   },
   {
@@ -546,9 +546,9 @@
    "source": [
     "trace = TraceSWOR()\n",
     "for _ in range(15):\n",
-    "    print(\"mass=\", trace.root.mass)\n",
+    "    print('mass=', trace.root.mass)\n",
     "    with trace:\n",
-    "        print(\"\".join(lm.sample(draw=trace)))"
+    "        print(''.join(lm.sample(draw=trace)))"
    ]
   },
   {
@@ -576,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2t = lark_stuff.transducer(ignore=\"\", decay=0.0125)\n",
+    "c2t = lark_stuff.transducer(ignore='', decay=0.0125)\n",
     "len(c2t.states)"
    ]
   },
@@ -595,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = \"SELECT * FROM data\""
+    "x = 'SELECT * FROM data'"
    ]
   },
   {
@@ -711,7 +711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg_t(\"SELECT * FROM data </s>\")"
+    "cfg_t('SELECT * FROM data </s>')"
    ]
   },
   {
@@ -721,7 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg_t(\"SELECT * FROM data </s>\")"
+    "cfg_t('SELECT * FROM data </s>')"
    ]
   },
   {
@@ -742,7 +742,7 @@
    "outputs": [],
    "source": [
     "for _ in range(10):\n",
-    "    print(\"\".join(lm.sample()))"
+    "    print(''.join(lm.sample()))"
    ]
   },
   {
@@ -752,7 +752,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next(\"SELECT * FROM \")"
+    "lm.p_next('SELECT * FROM ')"
    ]
   },
   {
@@ -800,7 +800,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = \"SELECT * FROM data\"\n",
+    "x = 'SELECT * FROM data'\n",
     "b = tokenizer.encode(x)\n",
     "b"
    ]
@@ -822,7 +822,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with timeit(\"composition\"):\n",
+    "with timeit('composition'):\n",
     "    c = FST.from_string(tuple(b), Float) @ b2c\n",
     "about(c)"
    ]
@@ -879,7 +879,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = x = \"SELECT * FROM data\""
+    "x = x = 'SELECT * FROM data'"
    ]
   },
   {
@@ -889,9 +889,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with timeit(\"composition\"):\n",
+    "with timeit('composition'):\n",
     "    bs = b2c @ FST.from_string(x, Float)\n",
-    "with timeit(\"trim\"):\n",
+    "with timeit('trim'):\n",
     "    bs.trim\n",
     "about(bs)"
    ]
@@ -1025,7 +1025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\".join(lm.sample()))"
+    "print(''.join(lm.sample()))"
    ]
   },
   {
@@ -1053,9 +1053,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bpe_lm = CharAlignedCFGLM(\n",
-    "    lm=lm, words={x for _, x in H.pairs}, eos=H.tokenizer.eos_token\n",
-    ")"
+    "bpe_lm = CharAlignedCFGLM(lm=lm, words={x for _, x in H.pairs}, eos=H.tokenizer.eos_token)"
    ]
   },
   {
@@ -1065,7 +1063,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next(\"\")"
+    "lm.p_next('')"
    ]
   },
   {
@@ -1083,7 +1081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bpe_lm.p_next(\"\")"
+    "bpe_lm.p_next('')"
    ]
   },
   {
@@ -1093,7 +1091,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm.p_next(\"SELECT \")"
+    "lm.p_next('SELECT ')"
    ]
   },
   {
@@ -1103,7 +1101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bpe_lm.p_next(\"SELECT \")"
+    "bpe_lm.p_next('SELECT ')"
    ]
   },
   {
