--- a/notes/Inference-Playground.ipynb
+++ b/notes/Inference-Playground.ipynb
@@ -142,7 +142,7 @@
    ],
    "source": [
     "ref = BruteForceGlobalProductOfExperts(lm1, lm2, MAX_LENGTH)\n",
-    "ref.target.project(\"\".join)"
+    "ref.target.project(''.join)"
    ]
   },
   {
@@ -165,7 +165,7 @@
     "    lm2,\n",
     "    MAX_LENGTH=MAX_LENGTH,\n",
     "    n_particles=N_PARTICLES,\n",
-    "    METHOD=\"is\",\n",
+    "    METHOD='is',\n",
     "    # METHOD = 'smc',\n",
     ")"
    ]
@@ -258,8 +258,8 @@
     }
    ],
    "source": [
-    "w.project(\"\".join).trim().compare(ref.target.project(\"\".join).trim()).sort_values(\n",
-    "    \"key\", ascending=False\n",
+    "w.project(''.join).trim().compare(ref.target.project(''.join).trim()).sort_values(\n",
+    "    'key', ascending=False\n",
     ")"
    ]
   },
@@ -328,7 +328,7 @@
     "# truncate the reference distribution to the support set of the sample;\n",
     "# renamed the keys to handle the minor discrepancy in the EOS symbol\n",
     "tmp = ref.target.filter(lambda k: k[:-1] in R).normalize().sort()\n",
-    "tmp.project(lambda k: k[:-1]).compare(R).sort_values(\"key\")"
+    "tmp.project(lambda k: k[:-1]).compare(R).sort_values('key')"
    ]
   },
   {
