--- a/notes/LM-Fun.ipynb
+++ b/notes/LM-Fun.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")"
+    "tokenizer = AutoTokenizer.from_pretrained('gpt2')"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm = LLM(AutoModelForCausalLM.from_pretrained(\"gpt2\"))"
+    "lm = LLM(AutoModelForCausalLM.from_pretrained('gpt2'))"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = GreedilyTokenizedLLM(\"gpt2\").p_next(\"Once upon a time,\")"
+    "p = GreedilyTokenizedLLM('gpt2').p_next('Once upon a time,')"
    ]
   },
   {
@@ -108,8 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = GreedilyTokenizedLLM(\"gpt2\").p_next(\n",
-    "    \"The following is some code that implements quick sort in Python:\"\n",
+    "p = GreedilyTokenizedLLM('gpt2').p_next(\n",
+    "    'The following is some code that implements quick sort in Python:'\n",
     ")"
    ]
   },
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M = GreedilyTokenizedLLM(\"gpt2\")\n",
+    "M = GreedilyTokenizedLLM('gpt2')\n",
     "# .p_terminal('The following is some code that implements quick sort in Python:')"
    ]
   },
@@ -168,7 +168,7 @@
     "        return hash(self.xs)\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return f\"{self.xs}\"\n",
+    "        return f'{self.xs}'\n",
     "\n",
     "    def p(self):\n",
     "        P = M.p_next(self.xs)\n",
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "Particle(\n",
-    "    \"The following is some code that implements the quick sort algorithm in Python:\"\n",
+    "    'The following is some code that implements the quick sort algorithm in Python:'\n",
     ").p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()"
    ]
   },
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "Particle(\n",
-    "    \"Once upon a time\"\n",
+    "    'Once upon a time'\n",
     ").p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()"
    ]
   },
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = Particle(\"Once upon a time,\")"
+    "p = Particle('Once upon a time,')"
    ]
   },
   {
