--- a/notes/Lark-Interface.ipynb
+++ b/notes/Lark-Interface.ipynb
@@ -263,10 +263,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"12 + 24 - 36 * 48 / 60 SELECT table.name AS thing WHERE table.potato IS NOT 'banana'\"\n",
+    "text = (\n",
+    "    \"12 + 24 - 36 * 48 / 60 SELECT table.name AS thing WHERE table.potato IS NOT 'banana'\"\n",
+    ")\n",
     "\n",
     "for x, y in lark_stuff.simple_tokenizer(text):\n",
-    "    print(f\"{x:15s} -> {y!r}\")"
+    "    print(f'{x:15s} -> {y!r}')"
    ]
   },
   {
@@ -284,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"SELECT name FROM data </s>\""
+    "text = 'SELECT name FROM data </s>'"
    ]
   },
   {
@@ -331,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lark_stuff.parser.parse(tokens, \"start\")"
+    "lark_stuff.parser.parse(tokens, 'start')"
    ]
   },
   {
@@ -423,9 +425,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(g.cnf.rules), len(g.cnf.prefix_grammar.trim().rules), len(\n",
-    "    g.cnf.prefix_grammar.trim().rules\n",
-    ") / len(g.cnf.rules)"
+    "(\n",
+    "    len(g.cnf.rules),\n",
+    "    len(g.cnf.prefix_grammar.trim().rules),\n",
+    "    len(g.cnf.prefix_grammar.trim().rules) / len(g.cnf.rules),\n",
+    ")"
    ]
   },
   {
