--- a/notes/SegTokenAligner.ipynb
+++ b/notes/SegTokenAligner.ipynb
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "prefix = \"aa#a#a#\"\n",
+    "prefix = 'aa#a#a#'\n",
     "display(char_lm.p_next(prefix))\n",
     "display(pullback(char_lm, prefix))"
    ]
@@ -1683,7 +1683,7 @@
     }
    ],
    "source": [
-    "tracer.root.graphviz(fmt_node=lambda x: f\"{x.mass}/{x._mass:.2g}\")"
+    "tracer.root.graphviz(fmt_node=lambda x: f'{x.mass}/{x._mass:.2g}')"
    ]
   },
   {
