--- a/notes/Segmentation-PFST.ipynb
+++ b/notes/Segmentation-PFST.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contexts = {\"a\", \"b\", \"c\", \"ab\", \"abc\"}\n",
-    "alphabet = set(\"abc\")"
+    "contexts = {'a', 'b', 'c', 'ab', 'abc'}\n",
+    "alphabet = set('abc')"
    ]
   },
   {
@@ -257,8 +257,8 @@
    "outputs": [],
    "source": [
     "test_strings = [\n",
-    "    \"aba\",\n",
-    "    \"ab\",\n",
+    "    'aba',\n",
+    "    'ab',\n",
     "    #'aa',\n",
     "    #'acab',\n",
     "    #'abc',\n",
@@ -478,7 +478,7 @@
    "source": [
     "C = cc\n",
     "for x in test_strings:\n",
-    "    display(HTML(f\"<hr/><h3>{x}</h3>\"))\n",
+    "    display(HTML(f'<hr/><h3>{x}</h3>'))\n",
     "    run_segmentation_test(C, x, contexts, verbose=2)"
    ]
   },
@@ -726,7 +726,7 @@
    ],
    "source": [
     "for x in test_strings:\n",
-    "    display(HTML(f\"<hr/><h3>{x}</h3>\"))\n",
+    "    display(HTML(f'<hr/><h3>{x}</h3>'))\n",
     "    run_segmentation_test(canonical, x, contexts, verbose=1)"
    ]
   },
@@ -968,8 +968,8 @@
     }
    ],
    "source": [
-    "contexts = {\"a\", \"b\", \"c\", \"abc\"}  # not prefix closed!\n",
-    "alphabet = set(\"abc\")\n",
+    "contexts = {'a', 'b', 'c', 'abc'}  # not prefix closed!\n",
+    "alphabet = set('abc')\n",
     "cc = construction(contexts, alphabet, canonical=True)\n",
     "cc.graphviz(fmt_node=fmt)"
    ]
@@ -1023,7 +1023,7 @@
    ],
    "source": [
     "for x in test_strings:\n",
-    "    display(HTML(f\"<hr/><h3>{x}</h3>\"))\n",
+    "    display(HTML(f'<hr/><h3>{x}</h3>'))\n",
     "    run_segmentation_test(cc, x, contexts, verbose=1)"
    ]
   },
