--- a/notes/grammar_processing_issues.ipynb
+++ b/notes/grammar_processing_issues.ipynb
@@ -21,8 +21,8 @@
     "import sys\n",
     "import getpass\n",
     "\n",
-    "if getpass.getuser() == \"benjamin.lebrun\":\n",
-    "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")"
+    "if getpass.getuser() == 'benjamin.lebrun':\n",
+    "    sys.path.append('/home/mila/b/benjamin.lebrun/genparse')"
    ]
   },
   {
@@ -54,12 +54,12 @@
     }
    ],
    "source": [
-    "cfg = LarkStuff(open(\"../benchmark/grammars/sql_case_sensitive.lark\").read()).char_cfg(\n",
-    "    0.99, ignore=\"[ ]?\"\n",
+    "cfg = LarkStuff(open('../benchmark/grammars/sql_case_sensitive.lark').read()).char_cfg(\n",
+    "    0.99, ignore='[ ]?'\n",
     ")\n",
     "cfg = locally_normalize(cfg, tol=1e-40, maxiter=np.inf)\n",
     "\n",
-    "with timeit(\"boolean EarleyCFGLM preprocessing\"):\n",
+    "with timeit('boolean EarleyCFGLM preprocessing'):\n",
     "    guide = EarleyBoolMaskCFGLM(cfg)  # should take forever"
    ]
   },
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guide.p_next(\"\")"
+    "guide.p_next('')"
    ]
   }
  ],
