--- a/notes/hfppl.ipynb
+++ b/notes/hfppl.ipynb
@@ -70,7 +70,7 @@
     "# LLM = CachedCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-hf\", auth_token=os.environ['HF_AUTH_TOKEN'])\n",
     "# LLM = CachedCausalLM.from_pretrained(\"lmsys/vicuna-7b-v1.5\")\n",
     "# LLM = CachedCausalLM.from_pretrained(\"mistralai/Mistral-7B-v0.1\")\n",
-    "MODEL_ID = \"codellama/CodeLlama-7b-Instruct-hf\""
+    "MODEL_ID = 'codellama/CodeLlama-7b-Instruct-hf'"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = prompt + \" SELECT state_color\""
+    "context = prompt + ' SELECT state_color'"
    ]
   },
   {
@@ -201,7 +201,6 @@
     "\n",
     "\n",
     "class GreedilyTokenizedLLM:\n",
-    "\n",
     "    def __init__(self, llm, tokenizer):\n",
     "        self.tokenizer = tokenizer\n",
     "        self._model = llm\n",
@@ -348,7 +347,7 @@
     "WS: /[ \\n]/\n",
     "\n",
     "\"\"\"\n",
-    "    ).char_cfg(0.99, ignore=\"[ ]?\")\n",
+    "    ).char_cfg(0.99, ignore='[ ]?')\n",
     ")"
    ]
   },
@@ -583,7 +582,7 @@
     }
    ],
    "source": [
-    "print(f\"{sum(len(p.context.tokens) for p in particles)/took:.2f} tokens/sec\")"
+    "print(f'{sum(len(p.context.tokens) for p in particles)/took:.2f} tokens/sec')"
    ]
   },
   {
