--- a/notes/hfppl_benleb.ipynb
+++ b/notes/hfppl_benleb.ipynb
@@ -30,10 +30,10 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "if getpass.getuser() == \"benjamin.lebrun\":\n",
-    "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")\n",
-    "    os.environ[\"HF_HOME\"] = os.path.join(os.environ[\"SCRATCH\"], \"hf_cache\")\n",
-    "    print(\"HF cache set; path updated\")\n",
+    "if getpass.getuser() == 'benjamin.lebrun':\n",
+    "    sys.path.append('/home/mila/b/benjamin.lebrun/genparse')\n",
+    "    os.environ['HF_HOME'] = os.path.join(os.environ['SCRATCH'], 'hf_cache')\n",
+    "    print('HF cache set; path updated')\n",
     "\n",
     "import nest_asyncio\n",
     "\n",
@@ -102,7 +102,7 @@
     "from genparse.lm import AsyncGreedilyTokenizedLLM\n",
     "\n",
     "genparse_llm = AsyncGreedilyTokenizedLLM.from_name(\n",
-    "    \"codellama/CodeLlama-7b-Instruct-hf\", batch_size=40\n",
+    "    'codellama/CodeLlama-7b-Instruct-hf', batch_size=40\n",
     ")"
    ]
   },
@@ -116,9 +116,7 @@
     "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
     "from genparse.util import LarkStuff\n",
     "\n",
-    "guide = EarleyBoolMaskCFGLM(\n",
-    "    LarkStuff(very_restricted_sql).char_cfg(0.99, ignore=\"[ ]?\")\n",
-    ")"
+    "guide = EarleyBoolMaskCFGLM(LarkStuff(very_restricted_sql).char_cfg(0.99, ignore='[ ]?'))"
    ]
   },
   {
@@ -377,7 +375,7 @@
     "particle_approx = sampler.run_inference(\n",
     "    prompt=prompt,\n",
     "    proposal=proposal,\n",
-    "    method=\"smc-standard\",\n",
+    "    method='smc-standard',\n",
     "    n_particles=5,\n",
     "    max_tokens=50,\n",
     "    verbosity=1,\n",
