--- a/notes/hfppl_for_tim_o.ipynb
+++ b/notes/hfppl_for_tim_o.ipynb
@@ -42,14 +42,12 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "if (\n",
-    "    getpass.getuser() == \"benjamin.lebrun\"\n",
-    "):  # change to your user if you want to set these\n",
+    "if getpass.getuser() == 'benjamin.lebrun':  # change to your user if you want to set these\n",
     "    # @TIMO you may need to set this to your local genparse repo\n",
-    "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")\n",
+    "    sys.path.append('/home/mila/b/benjamin.lebrun/genparse')\n",
     "    # @TIMO also set your cache IF you run into disk quota issues\n",
-    "    os.environ[\"HF_HOME\"] = os.path.join(os.environ[\"SCRATCH\"], \"hf_cache\")\n",
-    "    print(\"HF cache set; path updated\")"
+    "    os.environ['HF_HOME'] = os.path.join(os.environ['SCRATCH'], 'hf_cache')\n",
+    "    print('HF cache set; path updated')"
    ]
   },
   {
@@ -86,7 +84,7 @@
     }
    ],
    "source": [
-    "MODEL_ID = \"codellama/CodeLlama-7b-Instruct-hf\"\n",
+    "MODEL_ID = 'codellama/CodeLlama-7b-Instruct-hf'\n",
     "hfppl_llm = CachedCausalLM.from_pretrained(MODEL_ID, load_in_8bit=True)\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
     "    MODEL_ID,\n",
@@ -158,7 +156,7 @@
     "            WS: /[ ]/\n",
     "\n",
     "        \"\"\"\n",
-    "    ).char_cfg(0.99, ignore=\"[ ]?\")\n",
+    "    ).char_cfg(0.99, ignore='[ ]?')\n",
     ")"
    ]
   },
@@ -196,12 +194,15 @@
     "        self.compare_time = compare_time\n",
     "\n",
     "    async def step(self):\n",
-    "        (token, llm_prob, guide_prob, proposal_prob) = (\n",
-    "            await self.proposal.sample_next_token(\n",
-    "                context=\"\".join(self.context),\n",
-    "                prompt=self.prompt,\n",
-    "                compare_time=self.compare_time,\n",
-    "            )\n",
+    "        (\n",
+    "            token,\n",
+    "            llm_prob,\n",
+    "            guide_prob,\n",
+    "            proposal_prob,\n",
+    "        ) = await self.proposal.sample_next_token(\n",
+    "            context=''.join(self.context),\n",
+    "            prompt=self.prompt,\n",
+    "            compare_time=self.compare_time,\n",
     "        )\n",
     "        self.context.append(token)\n",
     "        self.weight += np.log(llm_prob) + np.log(guide_prob) - np.log(proposal_prob)\n",
@@ -214,7 +215,7 @@
     "            return\n",
     "\n",
     "    def immutable_properties(self):\n",
-    "        return [\"llm\", \"prompt\", \"guide\", \"compare_token\"]\n",
+    "        return ['llm', 'prompt', 'guide', 'compare_token']\n",
     "\n",
     "    def __repr__(self):\n",
     "        return f\"`{'' if not self.context else self.context[-1]}` : {''.join(self.context)} : {self.weight}\""
