--- a/notes/sql_debug.ipynb
+++ b/notes/sql_debug.ipynb
@@ -21,8 +21,8 @@
     "import sys\n",
     "import getpass\n",
     "\n",
-    "if getpass.getuser() == \"benjamin.lebrun\":\n",
-    "    sys.path.append(\"/home/mila/b/benjamin.lebrun/genparse\")"
+    "if getpass.getuser() == 'benjamin.lebrun':\n",
+    "    sys.path.append('/home/mila/b/benjamin.lebrun/genparse')"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "source": [
     "from genparse.evaluation.dataset import Dataset\n",
     "\n",
-    "dataset = Dataset(\"spider\", \"validation\")"
+    "dataset = Dataset('spider', 'validation')"
    ]
   },
   {
@@ -55,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = LarkStuff(\n",
-    "    open(\"../benchmark/grammars/sql_case_insensitive.lark\").read()\n",
-    ").char_cfg(0.99, ignore=\"[ ]?\")\n",
+    "cfg = LarkStuff(open('../benchmark/grammars/sql_case_insensitive.lark').read()).char_cfg(\n",
+    "    0.99, ignore='[ ]?'\n",
+    ")\n",
     "guide = EarleyBoolMaskCFGLM(cfg)"
    ]
   },
