--- a/notes/Token-Alignment.ipynb
+++ b/notes/Token-Alignment.ipynb
@@ -77,8 +77,8 @@
     ")\n",
     "\n",
     "A = p.cfg.V\n",
-    "B = {\"a\", \"aa\", \"aaa\", EOS}\n",
-    "ϕ = lambda b: \"\".join(b).strip(EOS)"
+    "B = {'a', 'aa', 'aaa', EOS}\n",
+    "ϕ = lambda b: ''.join(b).strip(EOS)"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T(\"aaa\", None).epsremove.trim"
+    "T('aaa', None).epsremove.trim"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T(\"aaa\", None).total_weight()"
+    "T('aaa', None).total_weight()"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "source": [
     "display_table(\n",
     "    [[p.cfg.language(100).project(ϕ), generation_tree(graft).D, PL]],\n",
-    "    headings=[\"target\", \"grafting-heuristic\", \"composition\"],\n",
+    "    headings=['target', 'grafting-heuristic', 'composition'],\n",
     ")"
    ]
   },
@@ -386,9 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "L_PB.assert_equal(\n",
-    "    p.cfg.language(100).project(ϕ)\n",
-    ")  # character-level distribution matches!"
+    "L_PB.assert_equal(p.cfg.language(100).project(ϕ))  # character-level distribution matches!"
    ]
   },
   {
@@ -400,7 +398,7 @@
    "source": [
     "display_table(\n",
     "    [[p.cfg.language(100).project(ϕ), L_PB, generation_tree(graft).D, PL]],\n",
-    "    headings=[\"target\", \"pfst\", \"grafting-heuristic\", \"composition\"],\n",
+    "    headings=['target', 'pfst', 'grafting-heuristic', 'composition'],\n",
     ")"
    ]
   },
