allow some import fixes

--- a/notes/Character-at-a-Time.ipynb
+++ b/notes/Character-at-a-Time.ipynb
@@ -18,11 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse import Float, CFGLM\n",
-    "from genparse.cfglm import locally_normalize, EOS, ERROR\n",
-    "from genparse.align.trie import TokenTrieApproximation, NextTokenTrie\n",
+    "from genparse import CFGLM\n",
+    "from genparse.cfglm import locally_normalize, EOS\n",
+    "from genparse.align.trie import TokenTrieApproximation\n",
     "from genparse.lm import GreedilyTokenizedLLM\n",
-    "from genparse.util import LarkStuff, display_table\n",
+    "from genparse.util import LarkStuff\n",
     "from genparse.inference import TraceSWOR"
    ]
   },
