--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -26,23 +26,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arsenal import iterview, timeit\n",
-    "from collections import Counter\n",
+    "from arsenal import timeit\n",
     "from IPython.display import HTML\n",
-    "from genparse import CFG, FST, EPSILON, Float, CFGLM, add_EOS, prefix_transducer\n",
-    "from genparse.cfglm import locally_normalize, EOS, pcfg_check, explode, add_EOS\n",
+    "from genparse import FST, Float, CFGLM, add_EOS\n",
+    "from genparse.cfglm import locally_normalize, EOS, pcfg_check, add_EOS\n",
     "from genparse.align import CharAlignedCFGLM\n",
     "from genparse.util import (\n",
     "    LarkStuff,\n",
     "    hf_tokenizer,\n",
     "    about,\n",
-    "    show_grammar,\n",
     "    normalize,\n",
-    "    display_table,\n",
     "    bpe2term_approx,\n",
     ")\n",
-    "from genparse.inference import TraceSWOR\n",
-    "from genparse.steer import generation_tree"
+    "from genparse.inference import TraceSWOR"
    ]
   },
   {
