--- a/notes/Inference-Playground.ipynb
+++ b/notes/Inference-Playground.ipynb
@@ -54,12 +54,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, numpy as np\n",
+    "import numpy as np\n",
     "import nest_asyncio\n",
     "\n",
     "nest_asyncio.apply()\n",
     "from genparse import CFGLM, Float\n",
-    "from genparse.util import display_table\n",
     "from genparse.steer import run, BruteForceGlobalProductOfExperts"
    ]
   },
