--- a/notes/SegTokenAligner.ipynb
+++ b/notes/SegTokenAligner.ipynb
@@ -15,10 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse import CFGLM, CFG, Chart, Float as Real\n",
-    "from genparse.cfglm import explode, add_EOS, EOS, SPACER\n",
-    "from genparse.steer import normalize, sample_dict, normalize\n",
-    "from genparse.align import pullback, ERROR\n",
+    "from genparse import CFGLM, CFG, Float as Real\n",
+    "from genparse.cfglm import explode, add_EOS\n",
+    "from genparse.steer import normalize\n",
+    "from genparse.align import pullback\n",
     "from genparse.inference import TraceSWOR\n",
     "from genparse import align\n",
     "from collections import Counter"
