--- a/notes/hfppl_benleb.ipynb
+++ b/notes/hfppl_benleb.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "from genparse.steer import HFPPLSampler\n",
-    "from genparse.proposal import TokenProposal, CharacterProposal\n",
+    "from genparse.proposal import CharacterProposal\n",
     "\n",
     "sampler = HFPPLSampler(llm=genparse_llm, guide=guide)\n",
     "proposal = CharacterProposal(llm=genparse_llm, guide=guide)"
