--- a/notes/hfppl_for_tim_o.ipynb
+++ b/notes/hfppl_for_tim_o.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "from hfppl import Model, CachedCausalLM, LMContext  # , smc_standard, smc_steer\n",
+    "from hfppl import Model, CachedCausalLM  # , smc_standard, smc_steer\n",
     "from transformers import AutoTokenizer"
    ]
   },
@@ -106,9 +106,8 @@
     "import genparse\n",
     "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
     "from genparse.util import LarkStuff\n",
-    "from genparse import EOS, Float\n",
     "from genparse.proposal import CharacterProposal\n",
-    "from genparse.inference import smc_standard, smc_steer\n",
+    "from genparse.inference import smc_standard\n",
     "from genparse.lm import AsyncGreedilyTokenizedLLM"
    ]
   },
@@ -179,9 +178,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse import Float\n",
-    "\n",
-    "\n",
     "class SteeringModel(Model):\n",
     "    def __init__(self, llm, guide, proposal, prompt, max_tokens, compare_time=False):\n",
     "        super().__init__()\n",
