--- a/notes/LM-Fun.ipynb
+++ b/notes/LM-Fun.ipynb
@@ -9,9 +9,7 @@
    "source": [
     "from genparse.lm import LLM, GreedilyTokenizedLLM\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "from genparse import CFGLM\n",
-    "from genparse.steer import LocalProduct\n",
-    "from arsenal.maths import softmax, sample\n",
+    "from arsenal.maths import sample\n",
     "from collections import Counter"
    ]
   },
