fixed most of the lint errors (issue #12)

--- a/notes/hfppl.ipynb
+++ b/notes/hfppl.ipynb
@@ -307,6 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
     "from genparse.proposal import CharacterProposal, TokenProposal\n",
     "from genparse.util import LarkStuff"
    ]
