--- a/notes/hfppl_benleb.ipynb
+++ b/notes/hfppl_benleb.ipynb
@@ -26,15 +26,6 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "import getpass\n",
-    "\n",
-    "if getpass.getuser() == 'benjamin.lebrun':\n",
-    "    sys.path.append('/home/mila/b/benjamin.lebrun/genparse')\n",
-    "    os.environ['HF_HOME'] = os.path.join(os.environ['SCRATCH'], 'hf_cache')\n",
-    "    print('HF cache set; path updated')\n",
-    "\n",
     "import nest_asyncio\n",
     "\n",
     "nest_asyncio.apply()"
@@ -438,7 +429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "genparse",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -452,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
