--- a/notes/sql_debug.ipynb
+++ b/notes/sql_debug.ipynb
@@ -13,20 +13,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9851ed1e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import getpass\n",
-    "\n",
-    "if getpass.getuser() == 'benjamin.lebrun':\n",
-    "    sys.path.append('/home/mila/b/benjamin.lebrun/genparse')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "fee5964d",
    "metadata": {},
@@ -90,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "genparse",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -104,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
