--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -26,10 +26,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from arsenal import timeit\n",
     "from IPython.display import HTML\n",
     "from genparse import FST, Float, CFGLM, add_EOS\n",
-    "from genparse.cfglm import locally_normalize, EOS, pcfg_check, add_EOS\n",
+    "from genparse.cfglm import locally_normalize, EOS, pcfg_check\n",
     "from genparse.align import CharAlignedCFGLM\n",
     "from genparse.util import (\n",
     "    LarkStuff,\n",
