--- a/notes/grammar_processing_issues.ipynb
+++ b/notes/grammar_processing_issues.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "from genparse.util import LarkStuff\n",
     "from genparse import locally_normalize\n",
-    "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
+    "from genparse.cfglm import BoolMaskCFGLM\n",
     "from arsenal import timeit"
    ]
   },
@@ -45,8 +45,8 @@
     ")\n",
     "cfg = locally_normalize(cfg, tol=1e-40, maxiter=np.inf)\n",
     "\n",
-    "with timeit('boolean EarleyCFGLM preprocessing'):\n",
-    "    guide = EarleyBoolMaskCFGLM(cfg)  # should take forever"
+    "with timeit('boolean LM preprocessing'):\n",
+    "    guide = BoolMaskCFGLM(cfg)  # should take forever"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "from genparse import EOS, add_EOS, Boolean, Float\n",
     "\n",
     "\n",
-    "class EarleyBoolMaskCFGLM2(LM):\n",
+    "class BoolMaskCFGLM2(LM):\n",
     "    \"LM-like interface for Boolean-masking CFG models; uses Earley's algorithm for inference.\"\n",
     "\n",
     "    def __init__(self, cfg):\n",
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guide = EarleyBoolMaskCFGLM2(cfg)"
+    "guide = BoolMaskCFGLM2(cfg)"
    ]
   },
   {
