--- a/notes/hfppl.ipynb
+++ b/notes/hfppl.ipynb
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
+    "from genparse.cfglm import BoolMaskCFGLM\n",
     "from genparse.proposal import CharacterProposal, TokenProposal\n",
     "from genparse.util import LarkStuff"
    ]
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guide = EarleyBoolMaskCFGLM(\n",
+    "guide = BoolMaskCFGLM(\n",
     "    LarkStuff(\n",
     "        r\"\"\"\n",
     "start: WS? \"SELECT\" WS select_expr WS \"FROM\" WS from_expr [WS \"WHERE\" WS bool_condition] [WS \"GROUP BY\" WS var_list] [WS \"ORDER BY\" WS orderby_expr] WS EOS\n",
