--- a/notes/hfppl_benleb.ipynb
+++ b/notes/hfppl_benleb.ipynb
@@ -104,10 +104,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
+    "from genparse.cfglm import BoolMaskCFGLM\n",
     "from genparse.util import LarkStuff\n",
     "\n",
-    "guide = EarleyBoolMaskCFGLM(LarkStuff(very_restricted_sql).char_cfg(0.99, ignore='[ ]?'))"
+    "guide = BoolMaskCFGLM(LarkStuff(very_restricted_sql).char_cfg(0.99, ignore='[ ]?'))"
    ]
   },
   {
