--- a/notes/sql_debug.ipynb
+++ b/notes/sql_debug.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "from genparse.util import LarkStuff\n",
-    "from genparse.cfglm import EarleyBoolMaskCFGLM"
+    "from genparse.cfglm import BoolMaskCFGLM"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "cfg = LarkStuff(open('../benchmark/grammars/sql_case_insensitive.lark').read()).char_cfg(\n",
     "    0.99, ignore='[ ]?'\n",
     ")\n",
-    "guide = EarleyBoolMaskCFGLM(cfg)"
+    "guide = BoolMaskCFGLM(cfg)"
    ]
   },
   {
