--- a/notes/hfppl_for_tim_o.ipynb
+++ b/notes/hfppl_for_tim_o.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "import genparse\n",
-    "from genparse.cfglm import EarleyBoolMaskCFGLM\n",
+    "from genparse.cfglm import BoolMaskCFGLM\n",
     "from genparse.util import LarkStuff\n",
     "from genparse.proposal import CharacterProposal\n",
     "from genparse.inference import smc_standard\n",
@@ -135,7 +135,7 @@
     "Q: Write a SQL query that returns white voters' average age for each state color.\n",
     "A:\"\"\"\n",
     "\n",
-    "guide = EarleyBoolMaskCFGLM(\n",
+    "guide = BoolMaskCFGLM(\n",
     "    LarkStuff(\n",
     "        r\"\"\"\n",
     "            start: WS? \"SELECT\" WS select_expr WS \"FROM\" WS from_expr [WS \"WHERE\" WS bool_condition] [WS \"GROUP BY\" WS var_list] [WS \"ORDER BY\" WS orderby_expr] WS EOS\n",
@@ -711,10 +711,24 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
